--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="space"></div>
     <div class="second-part">
       <h2 class="second-text">Enjoy on your TV.</h2>
-      <video class="video" repeat autoplay src="assets/anim2.m4v"></video>
+      <video class="video" loop autoplay src="assets/anim2.m4v"></video>
        <p class="second-paragraph">Watch on Smart TVs, Playstation, Xbox,<br> Chromecast, Apple TV, Blu-ray players, and <br> more.</p>
       <img class="tv" src="assets/tv.png">
     </div>
@@ -50,7 +50,7 @@
     <div class="space"></div>
     <div class="second-part">
       <h2 class="second-text">Watch everywhere.</h2>
-      <video style="width: 330px; margin-top:60px; margin-left:166px;" class="video" autoplay src="assets/anim1.m4v"></video>
+      <video style="width: 330px; margin-top:60px; margin-left:166px;" class="video" loop autoplay src="assets/anim1.m4v"></video>
        <p class="second-paragraph">Stream unlimited movies and TV shows on <br> your phone, tablet, laptop, and TV without<br> paying more</p>
       <img style="width: 500px;" class="tv" src="assets/computer.png">
     </div>
