--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mozambique - Watch TV Shows Online, Watch Movies Online</title>
+  <title>Watch TV Shows Online, Watch Movies Online</title>
   <link rel="shortcut icon" type="image-x/png" href="assets/favicon.png">
   <link rel="stylesheet" href="css/style.css">
 </head>
